--- a/socket/socket.vcxproj.filters
+++ b/socket/socket.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="socket_client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
