linux server socket and windows clien socket

--- a/socket/socket.vcxproj.filters
+++ b/socket/socket.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="socket_client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="server.cpp">
+    <ClCompile Include="receiver.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
