--- a/socket/socket.vcxproj
+++ b/socket/socket.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="receiver.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="socket_client.cpp">
+    <ClCompile Include="windows_client.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
